add DistanceComputationBenchmark